--- a/design_system/index.html
+++ b/design_system/index.html
@@ -200,7 +200,7 @@
       <img src="Mockup.png" alt="vickywang.me">
 
       <div class="ProjectBannerInnerND">
-        <h1 class=""><strong>Design System</strong> </h1>
+        <h1 ><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
         <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
@@ -212,7 +212,7 @@
       <div class="blankMin1880"></div>
       <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
-        <h1 class=""><strong>Design System</strong> </h1>
+        <h1 ><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
         <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
@@ -223,7 +223,7 @@
       <div class="blankMin1880"></div>
       <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
-        <h1 class=""><strong>Design System</strong> </h1>
+        <h1 ><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please adjust your browser window to view the responsive layout</h3>
         <img class="shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
         <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
@@ -285,7 +285,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="">
+        <div>
           <h3><strong>Skills</strong></h3>
           <h4>Design System</h4>
           <h4>Responsive design</h4>
@@ -295,7 +295,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="">
+        <div>
           <h3><strong>Tool</strong></h3>
 
           <h4>VS Code</h4>
@@ -1125,15 +1125,14 @@
       <div class="Grid-cell">
         <div class="element">
 
-          <h4 class="accordion noMargin"><strong>Title 1</strong>
-
+          <h4 class="accordion accordionBorderTop noMargin"><strong>Title 1</strong>
           </h4>
           <div class="accordion-content">
-            <h4 class=""><strong>Subtitle</strong> </h4>
-            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            <h4 ><strong>Subtitle</strong> </h4>
+            <h4 >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.</h4>
-            <ul class="">
+            <ul >
               <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                 pariatur. </li>
               <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
@@ -1141,13 +1140,14 @@
             </ul>
             <div class="blankHXS"></div>
           </div>
+
           <h4 class="accordion noMargin"><strong>Title 2</strong></h4>
           <div class="accordion-content">
-            <h4 class=""><strong>Subtitle</strong> </h4>
-            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            <h4 ><strong>Subtitle</strong> </h4>
+            <h4 >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.</h4>
-            <ul class="">
+            <ul >
               <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                 pariatur. </li>
               <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
@@ -1155,13 +1155,15 @@
             </ul>
             <div class="blankHXS"></div>
           </div>
+
           <h4 class="accordion noMargin"><strong>Title 3</strong></h4>
-          <div class="accordion-content">
-            <h4 class=""><strong>Subtitle</strong> </h4>
-            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+
+          <div class="accordion-content accordionBorderBottom">
+            <h4 ><strong>Subtitle</strong> </h4>
+            <h4 >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.</h4>
-            <ul class="">
+            <ul >
               <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                 pariatur. </li>
               <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
@@ -1188,14 +1190,14 @@
       <p class="tArrow">Note<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
     <div class="blankHXS"></div>
-    <div class="element">
+    <div class="element ">
       <div class="chip">Type1</div>
     </div>
 
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
-          <div class="element Grey100Bg leftVerLine ">
+          <div class="element leftVerLine border-radius colorBgGrey100">
             <h4>
               <p> <strong>Title </strong></p>
               <ul>
@@ -1522,9 +1524,6 @@
   </div>
 
   <!-- LRcarousel-->
-
-
-
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
@@ -1553,7 +1552,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow"  src="../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
@@ -1564,7 +1563,7 @@
 </body>
 <!--footer-->
 <footer class="Grey100Bg">
-  <div class="">
+  <div >
     <div class="footer">
       <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
       <div class="footer-right">
