--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   </header>
 
   <!-- header -->
-  <mai>
+  <main>
 
     <div class="blankHM"></div>
     <!--intro-->
@@ -497,7 +497,7 @@
       </div>
     </button>
     <!--back to top-->
-  </mai>
+  </main>
 
   <!--footer-->
   <footer class="Grey100Bg">
