--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -49,7 +49,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -138,7 +140,7 @@
   <!--progressBarScroll-->
   <div class="progressContainer">
     <div class="progress-container">
-      <div class="progress-bar " id="progressBar"></div>
+      <div class="progress-bar" id="progressBar"></div>
     </div>
   </div>
   <!--progressBarScroll-->
@@ -147,9 +149,10 @@
 
 
     <div class="backgroundColorNav ">
-      
+
       <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight widthLogo"
-        src="../../icon/arrow-back.svg" alt="Go back"><h5>BACK</h5> 
+          src="../../icon/arrow-back.svg" alt="Go back">
+        <h5>BACK</h5>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -347,26 +350,22 @@
         </div>
         <div class="Grid-cell">
           <section id="content1">
-            <section id="content11">
-              <!-- Title -->
-
-              <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-                <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
-                      src="../../icon/icon_research.svg" alt="Research">
-                  </h1>
-                </div>
+            <!-- Title -->
+            <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+              <div class="Grid-cell">
+                <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
+                    src="../../icon/icon_research.svg" alt="Research">
+                </h1>
               </div>
-              <!-- Title -->
+            </div>
+            <!-- Title -->
+            <section id="content11">
               <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
+              <div class="element">
+                <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
               </div>
               <!-- Arrow -->
               <!-- Img -->
-
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
                   <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
@@ -376,12 +375,9 @@
               <!-- Img -->
             </section>
             <section id="content12">
-
               <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
+              <div class="element">
+                <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
               </div>
               <!-- Arrow -->
               <div class="Grid-cell">
@@ -479,7 +475,7 @@
               <!-- Img -->
             </section>
             <section id="content32">
-               <!-- Arrow -->
+              <!-- Arrow -->
               <div class="wrapper">
                 <div class="element">
                   <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
