--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -326,22 +326,22 @@
           <nav class="subNav element">
             <ol>
               <li><a href="#content1" class="newTitlePanel">Content 1</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content11">C1 - SC 1</a></li>
-                  <li class="newPanelV3"><a href="#content12">C1 - SC 2</a></li>
+                <ul class="newPanelV3">
+                  <li><a href="#content11">C1 - SC 1</a></li>
+                  <li><a href="#content12">C1 - SC 2</a></li>
                 </ul>
               </li>
               <li><a href="#content2" class="newTitlePanel">Content 2</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content21">C2 - SC 1</a></li>
-                  <li class="newPanelV3"><a href="#content22">C2 - SC 2</a></li>
+                <ul class="newPanelV3">
+                  <li><a href="#content21">C2 - SC 1</a></li>
+                  <li><a href="#content22">C2 - SC 2</a></li>
                 </ul>
               </li>
 
               <li><a href="#content3" class="newTitlePanel">Content 3</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content31"> C3 - SC 1 </a></li>
-                  <li class="newPanelV3"><a href="#content32">C3 - SC 2</a></li>
+                <ul class="newPanelV3">
+                  <li><a href="#content31"> C3 - SC 1 </a></li>
+                  <li><a href="#content32">C3 - SC 2</a></li>
                 </ul>
               </li>
 
