Design system left nav

--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -443,6 +443,24 @@
                 </div>
               </div>
               <!-- Img -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
             </section>
           </section>
           <section id="content3">
@@ -473,6 +491,15 @@
                 </div>
               </div>
               <!-- Img -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
             </section>
             <section id="content32">
               <!-- Arrow -->
@@ -482,6 +509,15 @@
                 </div>
               </div>
               <!-- Arrow -->
+              <!-- Img -->
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element"> <img class="cardAPPOINTA " src="../../Placeholder.svg" alt="New User">
+                  </div>
+                </div>
+              </div>
+              <!-- Img -->
               <!-- Img -->
 
               <div class="Grid Grid--full u-textCenter">
