--- a/appointa/index.html
+++ b/appointa/index.html
@@ -17,8 +17,7 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description'
-    content='A simple way for recruiters to quickly and easily schedule interviews' />
+  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky Wang's Project">
 
@@ -28,11 +27,19 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- favicon -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -126,13 +133,14 @@
   <!--progressBarScroll-->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorAPPOINTA">VW
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-              <a target="_blank" href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+              <a target="_blank"
+                href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
@@ -223,27 +231,23 @@
   <div class="Grid Grid--gutters Grid--cols-2 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Opportunity</strong></h3>
-          <h4>The recruiter's primary focus is on finding qualified candidates for the open position
-            to fill the headcount requirement. However, recruiters are spending around two-thirds of
-            their overall hiring process on scheduling interviews.
-          </h4>
+        <h3><strong>Opportunity</strong></h3>
+        <h4>The recruiter's primary focus is on finding qualified candidates for the open position
+          to fill the headcount requirement. However, recruiters are spending around two-thirds of
+          their overall hiring process on scheduling interviews.
+        </h4>
 
-        </div>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Solution</strong></h3>
-          <h4> Provide a simple and straightforward way for recruiters to quickly and easily
-            schedule
-            interviews for both the hiring team and the candidate in order to achieve the company
-            hiring headcount requirement</h4>
-        </div>
+        <h3><strong>Solution</strong></h3>
+        <h4> Provide a simple and straightforward way for recruiters to quickly and easily
+          schedule
+          interviews for both the hiring team and the candidate in order to achieve the company
+          hiring headcount requirement</h4>
       </div>
     </div>
   </div>
@@ -251,48 +255,40 @@
   <div class="Grid Grid--gutters Grid--cols-4 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Duration</strong></h3>
-          <h4>June - August 2022 </h4>
-          <h4>10 Hours per week </h4>
+        <h3><strong>Duration</strong></h3>
+        <h4>June - August 2022 </h4>
+        <h4>10 Hours per week </h4>
 
-        </div>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Team</strong></h3>
-          <h4>Concept </h4>
-          <h4>Individual work</h4>
-        </div>
+        <h3><strong>Team</strong></h3>
+        <h4>Concept </h4>
+        <h4>Individual work</h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Role</strong></h3>
-          <h4>Product strategy</h4>
-          <h4>Research</h4>
-          <h4>Visual</h4>
+        <h3><strong>Role</strong></h3>
+        <h4>Product strategy</h4>
+        <h4>Research</h4>
+        <h4>Visual</h4>
 
 
-        </div>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
 
-          <h3><strong>Tool</strong></h3>
-          <h4>Figma</h4>
-          <h4>Photoshop</h4>
-          <h4>VS Code</h4>
+        <h3><strong>Tool</strong></h3>
+        <h4>Figma</h4>
+        <h4>Photoshop</h4>
+        <h4>VS Code</h4>
 
-        </div>
       </div>
     </div>
 
@@ -997,7 +993,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning
+                    the availability of both candidates and hiring managers
                   </p>
 
                 </div>
@@ -1594,7 +1591,9 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
+                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange
+                  the key steps in order and pair candidates with interviewers who have both the necessary availability
+                  and relevant skill set.</p>
               </div>
             </div>
           </div>
@@ -1860,7 +1859,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation.
+                    enhance wireframes with additional details..</p>
                 </div>
               </div>
             </div>
