--- a/design_system/index.html
+++ b/design_system/index.html
@@ -31,6 +31,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- favicon -->
 
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
@@ -129,7 +134,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
 
         <ul class="nav-menu">
@@ -1467,27 +1472,22 @@
               <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
               <div class="carousel__nav">
                 <a class="slider-nav" aria-label="Go to slide 1">
-                  <h4><strong>Title 1</strong> </h4>
-                  <h6>Lorem ipsum dolor sit amet</h6>
+                  <h4><strong>Lorem ipsum</strong> </h4>
                 </a>
                 <a class="slider-nav" aria-label="Go to slide 2">
-                  <h3>Title 2</h3>
-                  <h6>Lorem ipsum dolor sit amet</h6>
+                  <h4>Lorem ipsum</h4>
 
                 </a>
                 <a class="slider-nav" aria-label="Go to slide 3">
-                  <h3>Title 3</h3>
-                  <h6>Lorem ipsum dolor sit amet</h6>
+                  <h4>Lorem ipsum</h4>
 
                 </a>
                 <a class="slider-nav" aria-label="Go to slide 4">
-                  <h3>Title 4</h3>
-                  <h6>Lorem ipsum dolor sit amet</h6>
+                  <h4>Lorem ipsum</h4>
 
                 </a>
                 <a class="slider-nav" aria-label="Go to slide 5">
-                  <h3>Title 5</h3>
-                  <h6>Lorem ipsum dolor sit amet</h6>
+                  <h4>Lorem ipsum</h4>
 
                 </a>
               </div>
