--- a/glorify/index.html
+++ b/glorify/index.html
@@ -22,7 +22,11 @@
   <meta property="og:site_name" content="Vicky Wang's Project">
 
 
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- favicon -->
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
@@ -31,6 +35,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
 
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
@@ -126,8 +132,8 @@
   <!--progressBarScroll-->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorGLORIFY">VW
-      </a>
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active GLORIFY marginZero"><a href="/" class="nav-link box">PROJECT</a>
