--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -22,6 +23,13 @@
     content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
   <meta property='og:url' content="https://vickywang.me" />
   <meta property="og:site_name" content="Vicky's Website">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- favicon -->
+
 
   <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:width" content="1200">
@@ -50,7 +58,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -167,7 +177,7 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+        <a href="http://vickywang.me/"><img class="logo pointer" src="./icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
         <div class="navbar">
           <ul class="nav-menu">
             <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -261,7 +271,7 @@
     <!-- Arrow -->
     <div class="blankHXS"></div>
     <!-- projects -->
-    
+
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
