Header and logo

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -31,10 +31,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
   <!-- favicon -->
 
   <link
@@ -135,6 +135,7 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      </a>
       <div class="navbar">
 
         <ul class="nav-menu">
@@ -1320,8 +1321,8 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Conponents</span><img
-                  class="moveUpDown widthLogo" src="../icon/font.svg" alt="Research">
+              <h1 class="Grid Grid--center"> <span>Conponents</span><img class="moveUpDown widthLogo"
+                  src="../icon/font.svg" alt="Research">
               </h1>
             </div>
           </div>
