--- a/seer/index.html
+++ b/seer/index.html
@@ -38,7 +38,11 @@
   <meta property="og:site_name" content="Vicky Wang's Website">
 
 
-
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <!-- favicon -->
 
 
 
@@ -120,7 +124,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorSEER">VW
+      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
