--- a/design_system/index.html
+++ b/design_system/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Vicky Wang's portfolio website">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
+  <meta property='og:title' content="Vicky Wang | UX Designer | Product Designer" />
   <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky Wang's Project">
@@ -78,17 +78,6 @@
   <!--handwriting font-family: 'Gloria Hallelujah'; -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
-
-
-
-
-
-
-
-
-
-
-
 
 
 
