--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       </div>
     </div>
     <!-- Arrow -->
-    <div class="blankHM"></div>
+    <div class="blankHXS"></div>
     <!-- projects other -->
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -490,7 +490,7 @@
             Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
           </h4>
         </div>
-        <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+        <a href="https://vickywang.me" class=""><img class="widthXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
       </div>
     </div>
     <!-- message -->
