--- a/appointa/index.html
+++ b/appointa/index.html
@@ -2310,7 +2310,7 @@
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">For more information please visit my website </h5>
+      <h5 class="element ">Check out my website for more info </h5>
       <a href="https://vickywang.me" class="textDecor" target="_blank">VICKYWANG.ME</a>
     </div>
   </div>
