--- a/design_system/index.html
+++ b/design_system/index.html
@@ -312,10 +312,10 @@
       <div class="Grid-cell displayLaptop">
         <nav class="subNav element">
           <ol>
-            <li><a href="#content1" class="newTitlePanel">Font and color</a>
+            <li><a href="#content1" class="newTitlePanel">Styles</a>
               <ul class="newPanelV3">
-                <li><a href="#content11">Font</a></li>
-                <li><a href="#content12">Color</a></li>
+                <li><a href="#content11">Typography</a></li>
+                <li><a href="#content12">Color Guidance</a></li>
                 <li><a href="#content13">Elevation</a></li>
               </ul>
             </li>
@@ -348,7 +348,7 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Font and color</span><img class="moveUpDown widthLogo"
+              <h1 class="Grid Grid--center"> <span>Styles</span><img class="moveUpDown widthLogo"
                   src="../icon/font.svg" alt="Research">
               </h1>
             </div>
@@ -359,7 +359,7 @@
           <section id="content11" class="paddingNone">
             <!-- Font -->
             <div class="element">
-              <p class="tArrow">Font <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+              <p class="tArrow">Typography <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
             </div>
             <div class="blankHXS"></div>
             <div class="element">
@@ -1534,10 +1534,8 @@
 
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">For more information please visit my website&#33;</h5>
-      <div class="blankHXS"></div>
-
-      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+      <h4 class="element">Check out my website for more info&#33;</h4>
+      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
     </div>
   </div>
   <div class="blankHL"></div>
