--- a/glorify/index.html
+++ b/glorify/index.html
@@ -332,8 +332,9 @@
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">For more information please visit my website </h5>
-      <a href="https://vickywang.me" class="textDecor" target="_blank">VICKYWANG.ME</a>
+      <h4 class="element">Check out my website for more info&#33;</h4>
+      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+
     </div>
   </div>
   <div class="blankHL"></div>
