--- a/seer/index.html
+++ b/seer/index.html
@@ -1768,7 +1768,7 @@
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">For more information please visit my website </h5>
+      <h5 class="element ">Check out my website for more info </h5>
       <a href="https://vickywang.me" class="textUnderline" target="_blank">VICKYWANG.ME</a>
     </div>
   </div>
