--- a/design_system/index.html
+++ b/design_system/index.html
@@ -348,8 +348,8 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Styles</span><img class="moveUpDown widthLogo"
-                  src="../icon/font.svg" alt="Research">
+              <h1 class="Grid Grid--center"> <span>Styles &#160;</span><img class="moveUpDown iconS"
+                  src="../icon/library.svg" alt="Research">
               </h1>
             </div>
           </div>
@@ -406,7 +406,7 @@
             </div>
             <div class="blankHXS"></div>
             <div class="element">
-              <h3>Brand Expression</h3>
+              <h3>Tonal Palettes</h3>
             </div>
             <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
               <div class="Grid-cell">
@@ -502,7 +502,7 @@
             </div>
             <div class="blankHS"></div>
             <div class="element">
-              <h3>Action</h3>
+              <h3>Action &#38; Error</h3>
             </div>
             <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
               <div class="Grid-cell">
@@ -608,8 +608,8 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Layout</span><img class="moveUpDown widthLogo" src="../icon/font.svg"
-                  alt="Research">
+              <h1 class="Grid Grid--center"> <span>Layout &#160;</span><img class="moveUpDown iconS"
+                  src="../icon/layout.svg" alt="Research">
               </h1>
             </div>
           </div>
@@ -1096,8 +1096,8 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Cards &#38; notes</span><img class="moveUpDown widthLogo"
-                  src="../icon/font.svg" alt="Research">
+              <h1 class="Grid Grid--center"> <span>Cards &#38; notes &#160;</span><img class="moveUpDown iconS"
+                  src="../icon/note.svg" alt="Research">
               </h1>
             </div>
           </div>
@@ -1106,7 +1106,7 @@
           <section id="content31">
             <div class="wrapper">
               <div class="element">
-                <p class="tArrow">Note<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+                <p class="tArrow">Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
               </div>
               <div class="blankHXS"></div>
               <div class="element ">
@@ -1115,35 +1115,33 @@
 
               <div class="Grid Grid--full wrapper">
                 <div class="Grid-cell">
-                  <div class="element">
-                    <div class="element leftVerLine border-radius colorBgGrey100">
-                      <h4>
-                        <p> <strong>Title </strong></p>
-                        <ul>
-                          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut
-                            labore
-                            et dolore magna aliqua. </li>
-                          <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat
-                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                            deserunt
-                            mollit anim id est laborum.</li>
-                        </ul>
-                        <p> <strong>Title </strong></p>
-                        <ul>
-                          <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat
-                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                            deserunt
-                            mollit anim id est laborum.</li>
-                        </ul>
-                      </h4>
-                    </div>
+                  <div class="element leftVerLine border-radius colorBgGrey100">
+                    <h4>
+                      <p> <strong>Title </strong></p>
+                      <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          ut
+                          labore
+                          et dolore magna aliqua. </li>
+                        <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                          commodo
+                          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                          fugiat
+                          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                          deserunt
+                          mollit anim id est laborum.</li>
+                      </ul>
+                      <p> <strong>Title </strong></p>
+                      <ul>
+                        <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                          commodo
+                          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                          fugiat
+                          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                          deserunt
+                          mollit anim id est laborum.</li>
+                      </ul>
+                    </h4>
                   </div>
                 </div>
               </div>
@@ -1154,14 +1152,10 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="element">
-                    <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit,
-                      sed
-                      do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
+                  <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  </p>
 
-                  </div>
                 </div>
               </div>
             </div>
@@ -1291,9 +1285,7 @@
                       <div class="elementInnerDemoCard heightS">
                         <h4> <strong> Title </strong> </h4>
                         <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore
-                          et
-                          dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+                          labore et dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
                       </div>
                     </div>
                   </div>
@@ -1310,8 +1302,8 @@
           <!-- Title -->
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Conponents</span><img class="moveUpDown widthLogo"
-                  src="../icon/font.svg" alt="Research">
+              <h1 class="Grid Grid--center"> <span>Components &#160;</span><img class="moveUpDown iconS"
+                  src="../icon/components.svg" alt="Research">
               </h1>
             </div>
           </div>
@@ -1535,7 +1527,8 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h4 class="element">Check out my website for more info&#33;</h4>
-      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW"
+          title="vickywang.me"></a>
     </div>
   </div>
   <div class="blankHL"></div>
