--- a/glorify/index.html
+++ b/glorify/index.html
@@ -38,7 +38,9 @@
 
 
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -198,7 +200,7 @@
       <img src="Mockup.png" alt="GLORIFY">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
-          target="_blank"> <button class="button-35 GLORIFY">       
+          target="_blank"> <button class="button-35 GLORIFY">
             Slide Decks</button></a>
       </div>
     </div>
@@ -228,82 +230,56 @@
   <div class="Grid Grid--gutters Grid--cols-2 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Context</strong></h3>
-          <h4>Glorify is a mobile application that offers a vast library of content designed to support users in their
-            spiritual journey, particularly those who follow the Christian faith. The app provides a range of resources
-            such as daily devotionals, scripture readings, prayer guides, and other faith-based content that users can
-            access at their convenience. Glorify's content is designed to be immersive and engaging, with a focus on
-            helping users deepen their spiritual connection and growth.</h4>
-        </div>
+        <h3><strong>Context</strong></h3>
+        <h4>Glorify is a mobile application that offers a vast library of content designed to support users in their
+          spiritual journey, particularly those who follow the Christian faith. The app provides a range of resources
+          such as daily devotionals, scripture readings, prayer guides, and other faith-based content that users can
+          access at their convenience. Glorify's content is designed to be immersive and engaging, with a focus on
+          helping users deepen their spiritual connection and growth.</h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Opportunity</strong></h3>
-          <h4>Despite its rich content, Glorify has been primarily a single-player experience, lacking the community
-            engagement features that are integral to Christianity. This can limit the app's ability to fully meet the
-            user's needs for social and collaborative experiences in their faith journey.
-            To improve the user experience, I exploring ways to incorporate community engagement
-            features that align with the values of Christianity.  </h4>
-
-        </div>
+        <h3><strong>Opportunity</strong></h3>
+        <h4>Despite its rich content, Glorify has been primarily a single-player experience, lacking the community
+          engagement features that are integral to Christianity. This can limit the app's ability to fully meet the
+          user's needs for social and collaborative experiences in their faith journey.
+          To improve the user experience, I exploring ways to incorporate community engagement
+          features that align with the values of Christianity. </h4>
       </div>
     </div>
-
   </div>
 
   <div class="Grid Grid--gutters Grid--cols-4 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Timeline</strong></h3>
-          <h4>April 2023 </h4>
-          <h4>8 Hours </h4>
-
-        </div>
+        <h3><strong>Timeline</strong></h3>
+        <h4>April 2023 </h4>
+        <h4>8 Hours </h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Team</strong></h3>
-          <h4>Concept </h4>
-          <h4>Individual work</h4>
-          <h4>Personal project </h4>
-
-        </div>
+        <h3><strong>Team</strong></h3>
+        <h4>Concept </h4>
+        <h4>Individual work</h4>
+        <h4>Personal project </h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Role</strong></h3>
-          <h4>Product strategy</h4>
-          <h4>Research</h4>
-          <h4>Design</h4>
-
-
-        </div>
+        <h3><strong>Role</strong></h3>
+        <h4>Product strategy</h4>
+        <h4>Research</h4>
+        <h4>Design</h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInnerL">
-
-          <h3><strong>Tool</strong></h3>
-          <h4>Figma</h4>
-          <h4>VS Code</h4>
-          <h4>Photoshop</h4>
-
-
-        </div>
+        <h3><strong>Tool</strong></h3>
+        <h4>Figma</h4>
+        <h4>VS Code</h4>
+        <h4>Photoshop</h4>
       </div>
     </div>
 
@@ -333,7 +309,8 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h4 class="element">Check out my website for more info&#33;</h4>
-      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+      <a href="https://vickywang.me" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW"
+          title="vickywang.me"></a>
 
     </div>
   </div>
